==> samuelpoiraud/robot/STM32/QS/QS_can.c <==
#include "QS_can.h"
#include "QS_CANmsgList.h"
#include "QS_ports.h"
#include "QS_outputlog.h"
#include "stm32f4xx_can.h"
	#include "config_pin.h"
#define MASK_CAN_S			0x000 /* 0b00000000000 */
	#define MY_FILTER	ASSER_FILTER
	#define MY_FILTER	ACT_FILTER
	#define MY_FILTER	STRAT_FILTER
	#define MY_FILTER	SUPER_FILTER
	#define MY_FILTER	BALISE_FILTER
	#define QS_CAN_RX_IT_PRI 1

	void CAN_reinit(void)
	{
		CAN_InitTypeDef CAN_InitStructure;
		CAN_FilterInitTypeDef CAN_FilterInitStructure;

		CAN_DeInit(CAN1);

		RCC_APB1PeriphClockCmd(RCC_APB1Periph_CAN1, ENABLE);
		PORTS_can_init();


		CAN_InitStructure.CAN_Mode = CAN_Mode_Normal;
		CAN_InitStructure.CAN_Prescaler = PCLK1_FREQUENCY_HZ / 1000000 / 2;	//Prescaler = 21 -> 1Mhz clk CAN //Pourquoi le 2, je ne sais pas, mais on tombe sur la même vitesse que les dsPIC30F...
		CAN_InitStructure.CAN_SJW = CAN_SJW_1tq;
		CAN_InitStructure.CAN_BS1 = CAN_BS1_4tq;	//1tq propagation + 3tq segment 1
		CAN_InitStructure.CAN_BS2 = CAN_BS2_3tq;
		CAN_InitStructure.CAN_ABOM = ENABLE;
		CAN_InitStructure.CAN_AWUM = DISABLE;
		CAN_InitStructure.CAN_NART = DISABLE;
		CAN_InitStructure.CAN_RFLM = DISABLE;
		CAN_InitStructure.CAN_TTCM = DISABLE;
		CAN_InitStructure.CAN_TXFP = ENABLE;
		CAN_Init(CAN1, &CAN_InitStructure);

		#ifndef I_AM_CARTE_SUPER	//La carte super reçoi tout => pas de filtrage
			//Message pour la carte & message de debug sur FIFO 0
			CAN_FilterInitStructure.CAN_FilterNumber = 0;
			CAN_FilterInitStructure.CAN_FilterMode = CAN_FilterMode_IdMask;
			CAN_FilterInitStructure.CAN_FilterScale = CAN_FilterScale_16bit;
			CAN_FilterInitStructure.CAN_FilterIdHigh = MY_FILTER << 5;
			CAN_FilterInitStructure.CAN_FilterIdLow  = 0x0700 << 5;
			CAN_FilterInitStructure.CAN_FilterMaskIdHigh = MASK_BITS << 5;
			CAN_FilterInitStructure.CAN_FilterMaskIdLow  = MASK_BITS << 5;
			CAN_FilterInitStructure.CAN_FilterFIFOAssignment = 0;
			CAN_FilterInitStructure.CAN_FilterActivation = ENABLE;
			CAN_FilterInit(&CAN_FilterInitStructure);

			//Message en broadcast (qui peuvent flood) sur FIFO 1
			CAN_FilterInitStructure.CAN_FilterNumber = 1;
			CAN_FilterInitStructure.CAN_FilterMode = CAN_FilterMode_IdMask;
			CAN_FilterInitStructure.CAN_FilterScale = CAN_FilterScale_16bit;
			CAN_FilterInitStructure.CAN_FilterIdHigh = BROADCAST_FILTER << 5;
			CAN_FilterInitStructure.CAN_FilterIdLow  = BROADCAST_FILTER << 5;
			CAN_FilterInitStructure.CAN_FilterMaskIdHigh = MASK_BITS << 5;
			CAN_FilterInitStructure.CAN_FilterMaskIdLow  = MASK_BITS << 5;
			CAN_FilterInitStructure.CAN_FilterFIFOAssignment = 1;
			CAN_FilterInitStructure.CAN_FilterActivation = ENABLE;
			CAN_FilterInit(&CAN_FilterInitStructure);
		#else
			//Message pour la carte & message de debug sur FIFO 0
			CAN_FilterInitStructure.CAN_FilterNumber = 0;
			CAN_FilterInitStructure.CAN_FilterMode = CAN_FilterMode_IdMask;
			CAN_FilterInitStructure.CAN_FilterScale = CAN_FilterScale_16bit;
			CAN_FilterInitStructure.CAN_FilterIdHigh = 0;
			CAN_FilterInitStructure.CAN_FilterIdLow  = 0;
			CAN_FilterInitStructure.CAN_FilterMaskIdHigh = 0;
			CAN_FilterInitStructure.CAN_FilterMaskIdLow  = 0;
			CAN_FilterInitStructure.CAN_FilterActivation = ENABLE;

			CAN_FilterInitStructure.CAN_FilterFIFOAssignment = 0;
			CAN_FilterInit(&CAN_FilterInitStructure);
		#endif

		CAN_ITConfig(CAN1, CAN_IT_FMP0, ENABLE);
		CAN_ITConfig(CAN1, CAN_IT_FMP1, ENABLE);
		CAN_ITConfig(CAN1, CAN_IT_ERR, ENABLE);
		CAN_ITConfig(CAN1, CAN_IT_FOV0, ENABLE);	//Recv buffer 0 overrun
		CAN_ITConfig(CAN1, CAN_IT_FOV1, ENABLE);	//Recv buffer 1 overrun
//		CAN_ITConfig(CAN1, CAN_IT_EWG, ENABLE);	//TEC / REC >= 96
//		CAN_ITConfig(CAN1, CAN_IT_EPV, ENABLE);	//TEC / REC > 127
		CAN_ITConfig(CAN1, CAN_IT_BOF, ENABLE);	//Bus OFF, TEC / REC > 255

		NVIC_InitTypeDef NVIC_InitStructure;
		NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
		NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = QS_CAN_RX_IT_PRI;
		NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0;

		NVIC_InitStructure.NVIC_IRQChannel = CAN1_RX0_IRQn;
		NVIC_Init(&NVIC_InitStructure);

		NVIC_InitStructure.NVIC_IRQChannel = CAN1_RX1_IRQn;
		NVIC_Init(&NVIC_InitStructure);

		NVIC_InitStructure.NVIC_IRQChannel = CAN1_SCE_IRQn;
		NVIC_Init(&NVIC_InitStructure);
	}

			void CAN_send(CAN_msg_t* can_msg)
			{
				if(CAN_send_callback)
					(*CAN_send_callback)(can_msg);
			}

			void CAN_send(CAN_msg_t* can_msg)
			{
				CanTxMsg TxMsg;
				int i;

				#ifdef CAN_SEND_TIMEOUT_ENABLE
					Uint32 time = TIMEOUT_CAN_SEND;
				#endif

				if(can_msg->size > 8)	//sécurité si l'utilisateur fait des betises.
					can_msg->size = 0;

				TxMsg.ExtId = 12344;
				TxMsg.IDE = CAN_Id_Standard;
				TxMsg.RTR = CAN_RTR_Data;

				TxMsg.StdId = can_msg->sid;

				//Copie rapide 4 octet d'un coup
	//			((Uint32*)TxMsg.Data)[0] = ((Uint32*)can_msg->data)[0];
	//			((Uint32*)TxMsg.Data)[1] = ((Uint32*)can_msg->data)[1];

				for(i = 0; i < 8; i++) {
					TxMsg.Data[i] = can_msg->data[i];
				}

				TxMsg.DLC = can_msg->size;

				while(CAN_Transmit(CAN1, &TxMsg) == CAN_TxStatus_NoMailBox) {
					#ifdef CAN_SEND_TIMEOUT_ENABLE
					time--;
					if(time == 0) {
						#ifdef LED_ERROR
							LED_ERROR = 1;
						#endif

						return;
					}
					#endif
				}
				if(CAN_send_callback)
					(*CAN_send_callback)(can_msg);

			}

		static void CAN_receive(CAN_msg_t* can_msg)
		{
			CanRxMsg msg;
			int i;

			if(CAN_GetFlagStatus(CAN1, CAN_FLAG_FMP0))
			{
				/* réception d'un message dans le buffer RX0 */
				CAN_Receive(CAN1, 0, &msg);
			}
			else if(CAN_GetFlagStatus(CAN1, CAN_FLAG_FMP1))
			{
				/* réception d'un message dans le buffer RX1 */
				CAN_Receive(CAN1, 1, &msg);
			}
			else //Rien a été reçu ...
			{
				can_msg->sid=0;
				can_msg->size=0;
				return;
			}

			can_msg->sid = msg.StdId;
			can_msg->size = msg.DLC;

			for(i = 0; i < 8; i++) {
				can_msg->data[i] = msg.Data[i];
			}
		}

		CAN_msg_t CAN_get_next_msg()
		{
			static Uint8 next_to_read =0;
			CAN_msg_t* msgToReturn;
			if (next_to_read != m_can_rx_num)
			{
				NVIC_DisableIRQ(CAN1_RX0_IRQn);
				NVIC_DisableIRQ(CAN1_RX1_IRQn);

				// récupérer le prochain message à lire
				msgToReturn = &(m_can_buffer[next_to_read++]);
				next_to_read %= CAN_BUF_SIZE;

				// si on lit le dernier message, abaisser le drapeau.
				if (m_can_rx_num == next_to_read)
					m_canrx = FALSE;

				NVIC_EnableIRQ(CAN1_RX0_IRQn);
				NVIC_EnableIRQ(CAN1_RX1_IRQn);

				return *msgToReturn;
			}
			else
			{
				//assure que le flag est baissé
				m_canrx=FALSE;
				// renvoie d'un message invalide.
				return (CAN_msg_t) {0, "\0\0\0\0\0\0\0", 0};
			}
		}

	void CAN_send(CAN_msg_t* can_msg) {}

	CAN_msg_t CAN_get_next_msg() { static CAN_msg_t msg = {0}; return msg; }
